repo setup and running on the server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "tictactoe prompt",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "compile": "webpack",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,10 @@
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-preset-latest": "^6.24.1"
+    "babel-loader": "^7.1.2",
+    "babel-preset-latest": "^6.24.1",
+    "express": "^4.15.5",
+    "webpack": "^3.6.0",
+    "webpack-dev-middleware": "^1.12.0"
   }
 }
