--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-watch": "^2.0.7",
     "express": "^4.15.5",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "webpack": "^3.6.0",
     "webpack-dev-middleware": "^1.12.0"
   }
